--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chokidar": "^3.5.3",
     "express": "^4.18.2",
     "multicast-dns": "^7.2.5",
+    "ps-list": "^7.2.0",
     "qrcode-generator": "^2.0.4",
     "ws": "^8.13.0"
   },
